
VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-41 (opened December 12, 2013)

	* new version opened with the CRAN release of vegan_2.0-10 on
	December 12, 2013.

	* anosim, mantel, mantel.partial: R CMD check told that "... may
	be used in an incorrect context". The dots were added in r2765,
	and now removed.

	* as.hclust.spantree: a new function to cast a "spantree" result
	object to an "hclust" tree. 

	* hclust: add reorder() and rev() methods for standard "hclust"
	trees of R.  I have no clue why base R does not have these
	methods, but I provide them now in vegan. An additional reason for
	providing these methods is that reorder(<dendrogram-object>, wts,
	agglo.FUN = mean) will use unweighted mean of merged groups even
	when these are of very unequal sizes. The reorder method provided
	here will use group sizes as weights and the value of the group
	will be the mean of its leaves (terminal nodes).

	* biplot.rda: failed in axis scaling with negative 'scaling'
	values when some species had zero variance (and hence species
	scores was 0/0 = NaN).
	
	* cascadeKM: Calinski index for one group will now be NA instead
	of randomly chosen Inf, -Inf or NaN which can cause confusion (see
        http://stackoverflow.com/questions/21022848/r-produces-different-result-after-io-on-file
	
	* ordiellipse: failed if all points were on a line. Now handles
	these cases by drawing a line trhough the points, and issuing a
	warning from chol(): "the matrix is either rank-deficient or
	indefinite". Earlier we required at least three points for an
	ellipse, but these could still be on a line and fail. Now we
	accept two points, and draw the line with a warning. The problem
	with three points was reported by Paul Bacquet (Louvain,
	Belgium). 

	* treedive, treedist: default is now match.force = TRUE, and
	treedive() gained new argument 'verbose' to turn of most messages
	-- which is practical in oecosimu().
