@@ -389,6 +389,7 @@ S3method(scores, cca)
 S3method(scores, decorana)
 S3method(scores, default)
 S3method(scores, envfit)
+S3method(scores, hclust)
 S3method(scores, lda)
 S3method(scores, metaMDS)
 S3method(scores, monoMDS)
